2025-07-28T01:03:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16557588646 # 718
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-28
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 878 1356 / 890 1368
* notice: next accum: outdated-unq outdated-all / unq all: 881 1359 / 891 1369
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-13 2025-07-14] / [2025-07-27]

2025-07-27T01:04:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16545679107 # 717
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-27
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 877 1355 / 889 1367
* notice: next accum: outdated-unq outdated-all / unq all: 878 1356 / 890 1368
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-12] / [2025-07-13 2025-07-26]

2025-07-26T00:57:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16534334244 # 716
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-26
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 877 1355 / 888 1366
* notice: next accum: outdated-unq outdated-all / unq all: 877 1355 / 889 1367
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-25]

2025-07-25T00:59:02Z: