@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-28T01:03:37Z",
+  "timestamp" : "2025-07-29T01:05:53Z",
   "count_outdated" : 1359,
   "uniques_outdated" : 881,
-  "count" : 1369,
-  "uniques" : 891,
+  "count" : 1371,
+  "uniques" : 893,
   "clones" : [
     {
       "timestamp": "2025-07-16T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-28T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
