@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 12,
   "uniques": 3,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2025-07-27T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-28T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
